# fpga-sandbox

./: .gitignore  README.md  pyproject.toml  rgb_blink.v  shell.nix  up5k.pcf
freq/: README.md  main.v  pll.v
orangecrab-blink/: README.md  apio.ini  top.v
playground/: main.v  playground_tb.v  upduino.pcf
riscv/: .gitignore  Makefile  README.md  config.vh  instructions.vh  iodev.v  memory.v  pll.v  riscv.v  top.v  top_tb.v  uart.v
riscv/firmware/: Dockerfile  Makefile  boot.s  hello.c  riscv.c  riscv.h  riscv.ld
riscv/program/: Dockerfile  Makefile  boot.s  hello.c  riscv.h  riscv.ld
